--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -698,21 +698,21 @@
 "appjs_err_funds" = "Не удалось оплатить покупку: недостаточно средств.";
 "appjs_wall_post" = "Опубликовать запись";
 "appjs_wall_post_desc" = "хочет опубликовать на Вашей стене запись";
-"appjs_sperm_friends" = "вашим Друзьям";
-"appjs_sperm_friends_desc" = "добавлять пользователей в друзья и читать Ваш список друзей";
-"appjs_sperm_wall" = "вашей Стене";
-"appjs_sperm_wall_desc" = "смотреть Ваши новости, Вашу стену и создавать на ней записи";
-"appjs_sperm_messages" = "вашим Сообщениям";
-"appjs_sperm_messages_desc" = "читать и писать от Вашего имени сообщения";
-"appjs_sperm_groups" = "вашим Сообществам";
-"appjs_sperm_groups_desc" = "смотреть список Ваших групп и подписывать вас на другие";
-"appjs_sperm_likes" = "функционалу Лайков";
-"appjs_sperm_likes_desc" = "ставить и убирать отметки \"Мне нравится\" с записей";
-"appjs_sperm_request" = "Запрос доступа";
-"appjs_sperm_requests" = "запрашивает доступ к";
-"appjs_sperm_can" = "Приложение сможет";
-"appjs_sperm_allow" = "Разрешить";
-"appjs_sperm_disallow" = "Не разрешать";
+"appjs_act_friends" = "вашим Друзьям";
+"appjs_act_friends_desc" = "добавлять пользователей в друзья и читать Ваш список друзей";
+"appjs_act_wall" = "вашей Стене";
+"appjs_act_wall_desc" = "смотреть Ваши новости, Вашу стену и создавать на ней записи";
+"appjs_act_messages" = "вашим Сообщениям";
+"appjs_act_messages_desc" = "читать и писать от Вашего имени сообщения";
+"appjs_act_groups" = "вашим Сообществам";
+"appjs_act_groups_desc" = "смотреть список Ваших групп и подписывать вас на другие";
+"appjs_act_likes" = "функционалу Лайков";
+"appjs_act_likes_desc" = "ставить и убирать отметки \"Мне нравится\" с записей";
+"appjs_act_request" = "Запрос доступа";
+"appjs_act_requests" = "запрашивает доступ к";
+"appjs_act_can" = "Приложение сможет";
+"appjs_act_allow" = "Разрешить";
+"appjs_act_disallow" = "Не разрешать";
 "app_uninstalled" = "Приложение отключено";
 "app_uninstalled_desc" = "Оно больше не сможет выполнять действия от Вашего имени.";
 "app_err_not_found" = "Приложение не найдено";
