--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -701,21 +701,21 @@
 "appjs_err_funds" = "Не вдалося сплатити покупку: недостатньо коштів.";
 "appjs_wall_post" = "Опублікувати пост";
 "appjs_wall_post_desc" = "хоче опублікувати на вашій стіні пост";
-"appjs_sperm_friends" = "вашим Друзям";
-"appjs_sperm_friends_desc" = "додавати користувачів у друзі та читати ваш список друзів";
-"appjs_sperm_wall" = "вашій Стіні";
-"appjs_sperm_wall_desc" = "дивитися ваші новини, вашу стіну та створювати на ній пости";
-"appjs_sperm_messages" = "вашим повідомленням";
-"appjs_sperm_messages_desc" = "читати та писати від вашого імені повідомлення";
-"appjs_sperm_groups" = "вашим Спільнотам";
-"appjs_sperm_groups_desc" = "дивитися список ваших груп та підписувати вас на інші";
-"appjs_sperm_likes" = "функціоналу Лайків";
-"appjs_sperm_likes_desc" = "ставити та прибирати позначки \"мені подобається\" із записів";
-"appjs_sperm_request" = "Запит доступу";
-"appjs_sperm_requests" = "запитує доступ до";
-"appjs_sperm_can" = "Застосунок зможе";
-"appjs_sperm_allow" = "Дозволити";
-"appjs_sperm_disallow" = "Відхилити";
+"appjs_act_friends" = "вашим Друзям";
+"appjs_act_friends_desc" = "додавати користувачів у друзі та читати ваш список друзів";
+"appjs_act_wall" = "вашій Стіні";
+"appjs_act_wall_desc" = "дивитися ваші новини, вашу стіну та створювати на ній пости";
+"appjs_act_messages" = "вашим повідомленням";
+"appjs_act_messages_desc" = "читати та писати від вашого імені повідомлення";
+"appjs_act_groups" = "вашим Спільнотам";
+"appjs_act_groups_desc" = "дивитися список ваших груп та підписувати вас на інші";
+"appjs_act_likes" = "функціоналу Лайків";
+"appjs_act_likes_desc" = "ставити та прибирати позначки \"мені подобається\" із записів";
+"appjs_act_request" = "Запит доступу";
+"appjs_act_requests" = "запитує доступ до";
+"appjs_act_can" = "Застосунок зможе";
+"appjs_act_allow" = "Дозволити";
+"appjs_act_disallow" = "Відхилити";
 "app_uninstalled" = "Застосунок вимкнено";
 "app_uninstalled_desc" = "Він не зможе виконувати дії від вашого імені.";
 "app_err_not_found" = "Застосунок не знайдено";
