Russian Soviet: Fixed typos
"my_page", "privacy_setting_access_page", "voucher_bad", "voucher_good"

--- a/locales/ru_sov.strings
+++ b/locales/ru_sov.strings
@@ -1,5 +1,3 @@
-#include <ru>
-
 "__locale" = "su_SU.utf8;su_SU.UTF-8;Rus";
 "__WinEncoding" = "Windows-1251";
 
@@ -326,7 +324,7 @@
 /* Menus */
 
 "edit_button" = "корр.";
-"my_page" = "Мое Досье";
+"my_page" = "Моё Досье";
 "my_friends" = "Мои Товарищи";
 "my_photos" = "Мои Фотокартинки";
 "my_videos" = "Мои Киноленты";
@@ -398,7 +396,7 @@
 "results_many" = "$1 результатов";
 "results_other" = "$1 результатов";
 
-"privacy_setting_access_page" = "Кому из граждан видно мое досье";
+"privacy_setting_access_page" = "Кому из граждан видно моё досье";
 "privacy_setting_read_info" = "Кому видно основную информацию моей страницы";
 "privacy_setting_see_groups" = "Кому разрешено просматривать мои картинки и встречи";
 "privacy_setting_see_photos" = "Кому разрешено просматривать мои картинки";
@@ -423,7 +421,7 @@
 "current_email_address" = "Текущий адрес";
 "page_id" = "Номер досье";
 "you_can_also" = "Вы также можете";
-"delete_your_page" = "порвать свое досье";
+"delete_your_page" = "порвать своё досье";
 "delete_album" = "выкинуть свой альбом с картинками";
 
 "ui_settings_interface" = "Интерфейс";
@@ -542,9 +540,9 @@
 "voucher_explanation" = "Товарищ, введите сюда кодовый номер лотерейной карточки. Орган указывает его в вашем чеке или телеграмме.";
 "voucher_explanation_ex" = "Мы забираем лотерейные карточки, дубликаты отклоняются.";
 "invalid_voucher" = "Такуя лоетрейную карточку мы уже приняли";
-"voucher_bad" = "Товращи, мы уже принимали такую карточку, либо её срок истёк.";
+"voucher_bad" = "Товарищ, мы уже принимали такую карточку, либо её срок истёк.";
 "voucher_good" = "Лотерейная карточка активирован";
-"voucher_redeemed" = "Товарищ, благодарим за отправку карточки! Мы жуе начислили по ней рубли, но вы больше не сможете их повторно получить по той карточке.";
+"voucher_redeemed" = "Товарищ, благодарим за отправку карточки! Мы уже начислили по ней рубли, но вы больше не сможете их повторно получить по той карточке.";
 "redeem" = "Активировать лотерейную карточку";
 "deactivate" = "Порвать";
 "usages_total" = "Количество использований";
