--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -45,6 +45,7 @@
 "register_referer_meta_title" = "$1 приглашает вас в $2!";
 "register_referer_meta_desc" = "Присоединяйтесь к $1 и множеству других пользователей в $2!";
 "users" = "Пользователи";
+"other_fields" = "Остальное";
 
 /* Profile information */
 
