--- a/locales/ru_sov.strings
+++ b/locales/ru_sov.strings
@@ -44,6 +44,7 @@
 "register_referer_meta_desc" = "Присоединяйтесь к $1 и множеству других граждан в $2!";
 
 "users" = "Граждане";
+"other_fields" = "Остальное"
 
 /* Profile information */
 
