--- a/locales/ru_sov.strings
+++ b/locales/ru_sov.strings
@@ -42,9 +42,11 @@
 "register_meta_desc" = "Зарегистрируйтесь в $1 прямо сейчас!";
 "register_referer_meta_title" = "$1 приглашает вас в $2!";
 "register_referer_meta_desc" = "Присоединяйтесь к $1 и множеству других граждан в $2!";
+"registration_welcome_1" = "- универсальное средство поиска собратовъ основанное на структурѣ ВКонтакте.";
+"registration_welcome_2" = "Мы желаемъ, чтобы друзья, однокурсники, одноклассники, сосѣди и собратья всегда могли быть въ контактѣ.";
 
 "users" = "Граждане";
-"other_fields" = "Остальное"
+"other_fields" = "Остальное";
 
 /* Profile information */
 
