--- a/locales/ru_sov.strings
+++ b/locales/ru_sov.strings
@@ -42,8 +42,8 @@
 "register_meta_desc" = "Зарегистрируйтесь в $1 прямо сейчас!";
 "register_referer_meta_title" = "$1 приглашает вас в $2!";
 "register_referer_meta_desc" = "Присоединяйтесь к $1 и множеству других граждан в $2!";
-"registration_welcome_1" = "- универсальное средство поиска собратовъ основанное на структурѣ ВКонтакте.";
-"registration_welcome_2" = "Мы желаемъ, чтобы друзья, однокурсники, одноклассники, сосѣди и собратья всегда могли быть въ контактѣ.";
+"registration_welcome_1" = "- универсальное средство поиска товарищей основанное на структуре ВКонтакте.";
+"registration_welcome_2" = "Мы желаем, чтобы друзья, однокурсники, одноклассники, соседи и товарищи всегда могли быть в контакте.";
 
 "users" = "Граждане";
 "other_fields" = "Остальное";
