--- a/locales/en.strings
+++ b/locales/en.strings
@@ -531,6 +531,19 @@
 
 "end_all_sessions_done" = "All sessions was ended, including mobile apps";
 
+"backdrop_short" = "Backdrop";
+"backdrop" = "Page backdrop";
+"backdrop_desc" = "Вы можете установить два изображения в качестве фона вашей страницы. Они будут отображаться по бокам у тех, кто зайдёт на вашу страницу. С помощью этой возможности вы можете добавить своему профилю больше индивидуальности.";
+"backdrop_warn" = "You can set two pictures as your profile or group backdrop. They will be displayed on left and right edges of page. You can customize your profile with this feature, but use it responsibly."
+"backdrop_about_adding" = "You can upload only one picture, although depending on design, the ending result may look ugly. You can also change only one pic: if you already have two images set up and you want to change one - upload only one, the other won't be removed. To remove both images press the button below, you can't remove pictures individually."
+"backdrop_save" = "Save backdrop picture(s)";
+"backdrop_remove" = "Remove all backdrop pictures";
+"backdrop_error_title" = "Error saving backdrop settings";
+"backdrop_error_no_media" = "Images are corrupted or haven't been uploaded in their entirety";
+"backdrop_succ" = "Backdrop settings saved";
+"backdrop_succ_rem" = "Backdrop images have been removed";
+"backdrop_succ_desc" = "Users will start seeing changes in 5 minutes.";
+
 /* Two-factor authentication */
 
 "two_factor_authentication" = "Two-factor authentication";
