--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -491,6 +491,18 @@
 "end_all_sessions" = "Сбросить все сессии";
 "end_all_sessions_description" = "Если вы хотите выйти из $1 со всех устройств, нажмите на кнопку ниже";
 "end_all_sessions_done" = "Все сессии сброшены, включая мобильные приложения";
+"backdrop_short" = "Фон";
+"backdrop" = "Фон страницы";
+"backdrop_desc" = "Вы можете установить два изображения в качестве фона вашей страницы. Они будут отображаться по бокам у тех, кто зайдёт на вашу страницу. С помощью этой возможности вы можете добавить своему профилю больше индивидуальности.";
+"backdrop_warn" = "Изображения будут расположены так, как на схеме выше, их высота будет автоматически увеличена чтобы они занимали 100% высоты экрана, посередине будет размытие, заменить фон основного интерфейса OpenVK или добавить аудиозапись нельзя.";
+"backdrop_about_adding" = "Вы можете установить только 1 изображение (но будет некрасиво), а так же заменить только одно: если у вас уже стоит два, а вы хотите заменить второе - то загружайте только второе, первое сохранится, а чтобы удалить надо нажать на соответствующую кнопку внизу, удалять по одной нельзя.";
+"backdrop_save" = "Сохранить фон";
+"backdrop_remove" = "Удалить фон";
+"backdrop_error_title" = "Не удалось сохранить фон";
+"backdrop_error_no_media" = "Изображения повреждены или загружены не полностью";
+"backdrop_succ" = "Фон сохранён";
+"backdrop_succ_rem" = "Фон удалён";
+"backdrop_succ_desc" = "Изменения будут заметны другим пользователям через 5 минут.";
 
 /* Two-factor authentication */
 
