--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -745,6 +745,8 @@
 "app_err_note" = "Не удалось прикрепить новостную заметку";
 "app_err_note_desc" = "Убедитесь, что ссылка правильная и заметка принадлежит Вам.";
 
+"learn_more" = "Подробнее";
+
 /* Support */
 
 "support_opened" = "Открытые";
