Страница регистрации из 2007г (#788)
* Update @layout.xml

* Update @layout.xml

* Update Register.xml

* Update Login.xml

* Update style.css

* Update en.strings

* Update ru.strings

* Update ru_old.strings

* Update ru_sov.strings

* h2 -> .header2

* h2 + header2 styling

* Update Register.xml

* Update Register.xml

* Update Login.xml

* Welcome message addiction

* трахать

* +reg-welcome

* +reg-welcome

* +reg-welcome

* +reg-welcome (mixed up that with old rus one)

* +reg-welcome

* Adding UK localization

* Delete settings.json

* На всякий и тут обновлю на id в layout

Нужно для изменения иконок при создании тем.

* Update @layout.xml

* Minor changes

* minor changes

* Fixes requested by celestora

* пепяо с табами

* пепяо с табами

--- a/locales/en.strings
+++ b/locales/en.strings
@@ -53,8 +53,11 @@
 "register_meta_desc" = "Register in $1 now!";
 "register_referer_meta_title" = "$1 invites you to $2!";
 "register_referer_meta_desc" = "Join $1 and many other users at $2!";
+"registration_welcome_1" = "is a universal colleague search tool based on the VKontakte structure.";
+"registration_welcome_2" = "We want friends, classmates, neighbors and colleagues to always be in touch.";
 
 "users" = "Users";
+"other_fields" = "Other fields";
 
 /* Profile information */
 
