--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -44,7 +44,10 @@
 "register_meta_desc" = "Зарегистрируйтесь в $1 прямо сейчас!";
 "register_referer_meta_title" = "$1 приглашает вас в $2!";
 "register_referer_meta_desc" = "Присоединяйтесь к $1 и множеству других пользователей в $2!";
+"registration_welcome_1" = "- универсальное средство поиска коллег основанное на структуре ВКонтакте.";
+"registration_welcome_2" = "Мы хотим, чтобы друзья, однокурсники, одноклассники, соседи и коллеги всегда могли быть в контакте.";
 "users" = "Пользователи";
+"other_fields" = "Остальное";
 
 /* Profile information */
 
