--- a/locales/ru_old.strings
+++ b/locales/ru_old.strings
@@ -44,6 +44,9 @@
 "register_meta_desc" = "Зарегистрируйтесь въ $1 прямо сейчасъ!";
 "register_referer_meta_title" = "$1 приглашаетъ васъ въ $2!";
 "register_referer_meta_desc" = "Присоединяйтесь къ $1 и множеству другихъ пользователей въ $2!";
+"registration_welcome_1" = "- универсальное средство поиска собратовъ основанное на структурѣ ВКонтакте.";
+"registration_welcome_2" = "Мы желаемъ, чтобы друзья, однокурсники, одноклассники, сосѣди и собратья всегда могли быть въ контактѣ.";
+"other_fields" = "Остальное";
 
 /* Profile information */
 
