Global: Add ~~euro~~tour to the website
Co-authored-by: Daniel <60743585+myslivets@users.noreply.github.com>

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1143,3 +1143,166 @@
 "admin_registrationdate" = "Дата регистрации";
 "gifts_left_zero" = "Осталось ноль подарков";
 "admin_gender" = "Пол";
+
+/* Tutorial */
+
+"tour_title" = "Экскурсия по сайту";
+"reg_title" = "Регистрация";
+"ifnotlike_title" = " &quot;А если мне здесь не понравится?..&quot; ";
+"tour_promo" = "О том, что Вас ждет после регистрации";
+
+"reg_text" = "<a href='/reg'>Регистрация</a> аккаунта абсолютно бесплатна и займёт не более двух минут";
+"ifnotlike_text" = "Вы всегда можете удалить свой аккаунт";
+
+
+"tour_next" = "Далее →";
+"tour_reg" = "Регистрация →";
+
+
+"tour_section_1" = "Начало";
+"tour_section_2" = "Профиль";
+"tour_section_3" = "Фотографии";
+"tour_section_4" = "Поиск";
+"tour_section_5" = "Видеозаписи";
+"tour_section_6" = "Аудиозаписи";
+"tour_section_7" = "Новостная лента";
+"tour_section_8" = "Глобальная лента";
+"tour_section_9" = "Группы";
+"tour_section_10" = "События";
+"tour_section_11" = "Темы и дизайн";
+"tour_section_12" = "Кастомизация";
+"tour_section_13" = "Ваучеры";
+"tour_section_14" = "Мобильная версия";
+
+
+"tour_section_1_title_1" = "С чего начать?";
+"tour_section_1_text_1" = "Регистрация аккаунта является самым первым и основным этапом в начале вашего пути на данном сайте.";
+"tour_section_1_text_2" = "Для регистрации вам потребуется ввести имя, E-mail и пароль.";
+"tour_section_1_text_3" = "<b>Помните:</b> Ваш E-mail будет использоваться в качестве логина для входа на сайт. Также вы имеете полное право не указывать фамилию при регистрации. В случае утери пароля для входа на сайт, воспользуйтесь разделом <a href='/restore'>восстановления</a>";
+"tour_section_1_bottom_text_1" = "Регистрируясь на сайте, вы соглашаетесь с <a href='/about'>правилами сайта</a> и <a href='/privacy'>политикой конфиденциальности</a>";
+
+
+"tour_section_2_title_1" = "Ваш профиль";
+"tour_section_2_text_1_1" = "После регистрации на сайте, вы автоматически попадёте в <b>свой</b> профиль";
+"tour_section_2_text_1_2" = "Вы можете редактировать его где угодно и в любое время, когда вы сами этого пожелаете.";
+"tour_section_2_text_1_3" = "<b>Совет:</b> Чтобы ваш профиль выглядел красиво и презентабельно, вы можете его заполнить какой-либо информацией или загрузить фотографию, которая подчеркнёт, например, ваш глубокий внутренний мир.";
+"tour_section_2_bottom_text_1" = "Вы единственный, кто решает, сколько информации ваши друзья должны узнать о вас.";
+"tour_section_2_title_2" = "Задайте свои настройки своей приватности";
+"tour_section_2_text_2_1" = "Вы можете определить, кто именно может иметь доступ к определенным типам информации, разделам и возможностям связаться на вашей странице.";
+"tour_section_2_text_2_2" = "Вы имеете полное право закрыть доступ к своей странице от поисковых систем и незарегистрированных пользователей.";
+"tour_section_2_text_2_3" = "<b>Помните:</b> в будущем настройки приватности будут расширяться.";
+"tour_section_2_title_3" = "Персональный адрес страницы";
+"tour_section_2_text_3_1" = "После регистрации страницы, вам выдаётся персональный ID вида <b>@id12345</b>";
+"tour_section_2_text_3_2" = "<b>Стандартный ID</b>, который был получен после регистрации, <b>изменить нельзя</b>";
+"tour_section_2_text_3_3" = "Но в настройках своей страницы вы можете привязать свой персональный адрес и этот адрес <b>можно будет изменить</b> в любое время";
+"tour_section_2_text_3_4" = "<b>Совет:</b> Можно занимать любой свободный адрес, длина которого не меньше 5 символов. Авось какой-нибудь крутой займёте :)";
+"tour_section_2_bottom_text_2" = "<i>Поддерживается установка любого короткого адреса из латинских маленьких букв; адрес может содержать цифры (не в начале), точки и нижние подчёркивания (не в начале или конце)</i>";
+
+
+"tour_section_3_title_1" = "Делитесь своими фотомоментами";
+"tour_section_3_text_1" = "Раздел &quot;Фотографии&quot; доступен в вашем профиле сразу же с момента регистрации.";
+"tour_section_3_text_2" = "Вы можете просматривать фотоальбомы пользователей и создавать свои собственные.";
+"tour_section_3_text_3" = "Доступ ко всем вашим фотоальбомам для других пользователей регулируется в настройках приватности страницы.";
+"tour_section_3_bottom_text_1" = "Вы можете создавать неограниченное количество фотоальбомов с ваших путешествий или каких-либо событий, или просто хранить мемы";
+
+
+"tour_section_4_title_1" = "Поиск";
+"tour_section_4_text_1" = "Раздел &quot;Поиск&quot; позволяет искать пользователей и группы.";
+"tour_section_4_text_2" = "Данный раздел сайта со временем будет улучшаться.";
+"tour_section_4_text_3" = "Для начала поиска нужно знать имя/фамилию пользователя или название группы.";
+"tour_section_4_title_2" = "Быстрый поиск";
+"tour_section_4_text_4" = "Если вы хотите как-либо сэкономить время, то строка поиска доступна и в шапке сайта";
+
+
+"tour_section_5_title_1" = "Загружайте и делитесь видео со своими друзьями!";
+"tour_section_5_text_1" = "Вы можете загружать неограниченное количество видеозаписей и клипов";
+"tour_section_5_text_2" = "Раздел &quot;Видеозаписи&quot; регулируется настройками приватности";
+"tour_section_5_bottom_text_1" = "Видео можно загружать минуя раздел &quot;Видеозаписи&quot; через обычное прикрепление к новой записи на стене:";
+"tour_section_5_title_2" = "Импортирование видео с YouTube";
+"tour_section_5_text_3" = "Кроме загрузки видео напрямую, сайт поддерживает и встраивание видео из YouTube";
+
+
+"tour_section_6_title_1" = "Аудиозаписи, которых пока что нет XD";
+"tour_section_6_text_1" = "Я был бы очень рад сделать туториал по этому разделу, но солнышко Вриска не сделала музыку";
+
+
+"tour_section_7_title_1" = "Следите за тем, что пишут ваши друзья";
+"tour_section_7_text_1" = "Раздел &quot;Мои Новости&quot; разделяется на два типа: локальная лента и глобальная лента";
+"tour_section_7_text_2" = "В локальной ленте будут показываться новости только ваших друзей и групп";
+"tour_section_7_bottom_text_1" = "Никакой системы рекомендаций. <b>Свою ленту новостей формируете только вы.</b>";
+
+
+"tour_section_8_title_1" = "Следите за тем, какие темы обсуждают на сайте";
+"tour_section_8_text_1" = "В глобальной ленте новостей будут показываться записи всех пользователей сайта и групп";
+"tour_section_8_text_2" = "Просмотр данного раздела может не рекомендоваться для чувствительных и ранимых людей";
+"tour_section_8_bottom_text_1" = "Дизайн глобальной ленты по дизайну никак не отличается от локальной";
+"tour_section_8_bottom_text_2" = "В ленте есть множество типов контента: начиная от обычных фото и видео, и заканчивая анонимными постами и опросами";
+
+
+"tour_section_9_title_1" = "Создавайте группы!";
+"tour_section_9_text_1" = "На сайте уже имеются тысячи групп, посвящённые различным темам и каким-либо фанатским объединениям";
+"tour_section_9_text_2" = "Вы можете присоединяться к любой группе. А если не нашли подходящую, то можно создавать и свою";
+"tour_section_9_text_3" = "Каждая группа имеет свой раздел вики-страниц, фотоальбомов, блок ссылок и обсуждений";
+"tour_section_9_title_2" = "Управляйте своей группой вместе с другом";
+"tour_section_9_text_2_1" = "Управление группой осуществляется в разделе &quot;Редактировать группу&quot; под аватаром сообщества";
+"tour_section_9_text_2_2" = "Создайте команду администраторов из обычных участников или тех, кому вы доверяете";
+"tour_section_9_text_2_3" = "Вы можете скрыть нужного Вам администратора, чтобы он нигде не показывался в пределах вашей группы";
+"tour_section_9_bottom_text_1" = "Раздел &quot;Мои Группы&quot; находится в левом меню сайта";
+"tour_section_9_bottom_text_2" = "Пример сообщества";
+"tour_section_9_bottom_text_3" = "Группы часто представляют собой реальные организации, члены которых хотят оставаться на связи со своей аудиторией";
+
+
+"tour_section_10_title_1" = "Упс";
+"tour_section_10_text_1" = "Я был бы очень рад сделать туториал по этому разделу, но раздел находится на этапе разработки. А сейчас мы пока этот раздел туториала пропустим и пойдём дальше...";
+
+
+"tour_section_11_title_1" = "Темы оформления";
+"tour_section_11_text_1" = "После регистрации, в качестве оформления у вас будет установлена стандартная тема";
+"tour_section_11_text_2" = "Некоторых новых пользователей может слегка отпугнуть нынешняя стоковая тема, которая веет совсем уж древностью";
+"tour_section_11_text_3" = "<b>Но не беда:</b> Вы можете создать свою тему для сайта, ознакомившись с <a href='https://docs.openvk.uk/'>документацией</a> или выбрать уже существующую из каталога";
+"tour_section_11_bottom_text_1" = "Каталог тем доступен в разделе &quot;Мои Настройки&quot; во вкладке &quot;Интерфейс&quot; ";
+"tour_section_11_wordart" = "<img src='https://openvk.uk/assets/packages/static/openvk/img/tour/wordart.png' width='65%'>";
+
+"tour_section_12_title_1" = "Фон профиля и группы";
+"tour_section_12_text_1" = "Вы можете установить два изображения в качестве фона вашей страницы";
+"tour_section_12_text_2" = "Они будут отображаться по бокам у тех, кто зайдёт на вашу страницу";
+"tour_section_12_text_3" = "<b>Совет:</b> перед установкой фона, поэкспериментируйте с разметкой: попробуйте отзеркалить будущую фоновую картинку, или вообще просто создайте красивый градиент";
+"tour_section_12_title_2" = "Аватары";
+"tour_section_12_text_2_1" = "Вы можете задать вариант показа аватара пользователя: стандартное, закруглённые и квадратные (1:1)";
+"tour_section_12_text_2_2" = "Данные настройки будут видны только вам";
+"tour_section_12_title_3" = "Редактирование левого меню";
+"tour_section_12_text_3_1" = "При необходимости вы можете скрыть ненужные разделы сайта";
+"tour_section_12_text_3_2" = "<b>Напоминание: </b>Разделы первой необходимости (Моя Страница; Мои Друзья; Мои Ответы; Мои Настройки) скрыть нельзя";
+"tour_section_12_title_4" = "Вид постов";
+"tour_section_12_text_4_1" = "Если надоел старый дизайн стены, который был в некогда популярном оригинальном ВКонтакте.ру, то вы всегда можете изменить вид постов на Микроблог";
+"tour_section_12_text_4_2" = "Вид постов можно менять между двумя вариантами в любое время";
+"tour_section_12_text_4_3" = "<b>Обратите внимание</b>, что если выбран старый вид отображения постов, то последние комментарии подгружаться не будут";
+"tour_section_12_bottom_text_1" = "Страница установки фона";
+"tour_section_12_bottom_text_2" = "Примеры страниц с установленным фоном";
+"tour_section_12_bottom_text_3" = "С помощью этой возможности вы можете добавить своему профилю больше индивидуальности";
+"tour_section_12_bottom_text_4" = "Старый вид постов";
+"tour_section_12_bottom_text_5" = "Микроблог";
+
+
+"tour_section_13_title_1" = "Ваучеры";
+"tour_section_13_text_1" = "Ваучер в OpenVK это что-то вроде промокода на добавление какой-либо валюты (проценты рейтинга, голосов и так далее)";
+"tour_section_13_text_2" = "Подобные купоны создаются по каким-либо значимым событиям и праздникам. Следите за <a href='https://t.me/openvk'>Telegram-каналом</a> OpenVK";
+"tour_section_13_text_3" = "После активации какого-либо ваучера, заданная администраторами валюта будет перечислена в вашу пользу";
+"tour_section_13_text_4" = "<b>Помните: </b>Все ваучеры имеют ограниченный срок активации";
+"tour_section_13_bottom_text_1" = "Ваучеры состоят из 24 цифр и букв";
+"tour_section_13_bottom_text_2" = "Успешная активация (например, нам зачислили 100 голосов)";
+"tour_section_13_bottom_text_3" = "<b>Внимание: </b>После активации ваучера на вашу страницу, тот же самый ваучер нельзя будет активировать повторно";
+
+"tour_section_14_title_1" = "Мобильная версия";
+"tour_section_14_text_1" = "На данный момент мобильной веб-версии сайта пока нет, но зато есть мобильное приложение для Android";
+"tour_section_14_text_2" = "OpenVK Legacy - это мобильное приложение OpenVK для ретро-устройств на Android с дизайном ВКонтакте 3.0.4 из 2013 года";
+"tour_section_14_text_3" = "Минимально поддерживаемой версией является Android 2.1 Eclair, то есть аппараты времён начала 2010-ых вполне пригодятся";
+
+"tour_section_14_title_2" = "Где это можно скачать?";
+"tour_section_14_text_2_1" = "Релизные версии скачиваются через официальный репозиторий F-Droid";
+"tour_section_14_text_2_2" = "Если вы являетесь бета-тестировщиком приложения, то новые версии приложения выкладываются в отдельный канал обновления";
+"tour_section_14_text_2_3" = "<b>Важно: </b>Приложение может иметь различные баги и недочёты, об ошибках сообщайте в <a href='/app'>официальную группу приложения</a>";
+
+"tour_section_14_bottom_text_1" = "Скриншоты приложения";
+"tour_section_14_bottom_text_2" = "На этом экскурсия по сайту завершена. Если вы хотите попробовать наше мобильное приложение, создать здесь свою группу, позвать своих друзей или найти новых, или вообще просто как-нибудь поразвлекаться, то это можно сделать прямо сейчас, пройдя небольшую <a href='/reg'>регистрацию</a>";
+"tour_section_14_bottom_text_3" = "На этом экскурсия по сайту завершена."
