Site Tour. Locales: Update ru.strings

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1197,6 +1197,7 @@
 "tour_section_2_text_3_3" = "Но в настройках своей страницы вы можете привязать свой персональный адрес и этот адрес <b>можно будет изменить</b> в любое время";
 "tour_section_2_text_3_4" = "<b>Совет:</b> Можно занимать любой свободный адрес, длина которого не меньше 5 символов. Авось какой-нибудь крутой займёте :)";
 "tour_section_2_bottom_text_2" = "<i>Поддерживается установка любого короткого адреса из латинских маленьких букв; адрес может содержать цифры (не в начале), точки и нижние подчёркивания (не в начале или конце)</i>";
+"tour_section_2_title_4" = "Стена";
 
 
 "tour_section_3_title_1" = "Делитесь своими фотомоментами";
@@ -1209,7 +1210,7 @@
 "tour_section_4_title_1" = "Поиск";
 "tour_section_4_text_1" = "Раздел &quot;Поиск&quot; позволяет искать пользователей и группы.";
 "tour_section_4_text_2" = "Данный раздел сайта со временем будет улучшаться.";
-"tour_section_4_text_3" = "Для начала поиска нужно знать имя/фамилию пользователя или название группы.";
+"tour_section_4_text_3" = "Для начала поиска нужно знать имя (или фамилию) пользователя; а если ищете группу, то нужно знать её название.";
 "tour_section_4_title_2" = "Быстрый поиск";
 "tour_section_4_text_4" = "Если вы хотите как-либо сэкономить время, то строка поиска доступна и в шапке сайта";
 
