Site Tour: sdyuhugjhltrisijdgotdrjksfljgdfhkjg

--- a/locales/en.strings
+++ b/locales/en.strings
@@ -1297,7 +1297,7 @@
 "tour_section_2_text_1_2" = "You can edit it anywhere and anytime you want.";
 "tour_section_2_text_1_3" = "<b>Hint:</b> To make your profile look nice and presentable, you can fill it with information or upload a photo that highlights, for example, your deep inner world.";
 "tour_section_2_bottom_text_1" = "You are the one who decides how much information your friends need to know about you.";
-"tour_section_2_title_2" = "Set your own privacy settings;
+"tour_section_2_title_2" = "Set your own privacy settings";
 "tour_section_2_text_2_1" = "You can define exactly who can access certain types of information and sections on your page.";
 "tour_section_2_text_2_2" = "You have the right to block access to your page from search engines and unregistered users.";
 "tour_section_2_text_2_3" = "<b>Remember:</b> privacy settings will be expanded in the future.";
