--- a/locales/en.strings
+++ b/locales/en.strings
@@ -66,7 +66,7 @@
 "birth_date" = "Birth date";
 "registration_date" = "Registration date";
 "hometown" = "Hometown";
-"this_is_you" = "that is You";
+"this_is_you" = "it's you";
 "edit_page" = "Edit page";
 "edit_group" = "Edit group";
 "change_status" = "change status";
@@ -620,15 +620,15 @@
 "notifications_post" = "$1 published $2a post$3 on your wall: $4";
 "notifications_appoint" = "$1 appointed you as community manager $2";
 
-"nt_liked_yours" = "liked yours";
-"nt_shared_yours" = "shared yours";
+"nt_liked_yours" = "liked your";
+"nt_shared_yours" = "shared your";
 "nt_commented_yours" = "commented";
 "nt_written_on_your_wall" = "wrote on your wall";
 "nt_made_you_admin" = "appointed you in the community";
 
 "nt_from" = "from";
-"nt_yours_adjective" = "yours";
-"nt_yours_feminitive_adjective" = "yours";
+"nt_yours_adjective" = "your";
+"nt_yours_feminitive_adjective" = "your";
 "nt_post_nominative" = "post";
 "nt_post_instrumental" = "post";
 "nt_note_instrumental" = "note";
