Added myself as a translator & corrected the name

--- a/locales/list.yml
+++ b/locales/list.yml
@@ -12,8 +12,8 @@ list:
   - code: "uk"
     flag: "ua"
     name: "Ukrainian"
-    native_name: "Україньска"
-    author: "Andrej Lenťaj, Maxim Hrabovi (dechioyo) and Kirill (mbsoft)"
+    native_name: "Українcька"
+    author: "Aqukie (yaroslav.bielograd@ukr.net), Andrej Lenťaj, Maxim Hrabovi (dechioyo) and Kirill (mbsoft)"
   - code: "by"
     flag: "by"
     name: "Belarussian"
