--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -1326,4 +1326,4 @@
 
 "tour_section_14_bottom_text_1" = "Скріншоти застосунку";
 "tour_section_14_bottom_text_2" = "На цьому екскурсія сайтом завершена. Якщо ви хочете спробувати наш мобільний застосунок, створити тут свою групу, покликати своїх друзів чи знайти нових, або взагалі просто якось розважитися, то це можна зробити просто зараз, пройшовши невелику <a href='/reg'>реєстрацію</a>";
-"tour_section_14_bottom_text_3" = "На цьому екскурсія сайтом завершена."
+"tour_section_14_bottom_text_3" = "На цьому екскурсія сайтом завершена.";
