Locales: uk hotfix

--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -1216,7 +1216,7 @@
 "tour_section_2_title_1" = "Ваш профіль";
 "tour_section_2_text_1_1" = "Після реєстрації на сайті, ви автоматично потрапите у <b>свій</b> профіль";
 "tour_section_2_text_1_2" = "Ви зможете редагувати його де завгодно та в будь-який час, коли Ви самі цього бажаєте.";
-"tour_section_2_text_1_3" = "<b>Порада:</b> Щоб ваш профіль мав гарний і поважний вигляд, ви можете його заповнити будь-якою інформацією або завантажити фотографію, яка підкреслить, наприклад, ваш глибокий внутрішній світ."";
+"tour_section_2_text_1_3" = "<b>Порада:</b> Щоб ваш профіль мав гарний і поважний вигляд, ви можете його заповнити будь-якою інформацією або завантажити фотографію, яка підкреслить, наприклад, ваш глибокий внутрішній світ.";
 "tour_section_2_bottom_text_1" = "Ви єдиний, хто вирішує, скільки інформації ваші друзі мають дізнатися про вас.";
 "tour_section_2_title_2" = "Задайте свої налаштування своєї приватності";
 "tour_section_2_text_2_1" = "Ви можете визначити, хто саме може мати доступ до певних типів інформації, розділам та можливостям зв'язатися з вами.";
